--- a/themes/TechBlog/layouts/partials/components/frontpage-sidebar.html
+++ b/themes/TechBlog/layouts/partials/components/frontpage-sidebar.html
@@ -1,15 +1,28 @@
 <div class="w-52 lg:w-80 bg-slate-100 shrink-0">
-  <div class="p-4">
+  <div class="p-4 flex flex-col gap-6">
     <div class="">
-      <h5>Popular Tags</h5>
-      <ul id="tags-single">
-        <li>Tags:</li>
-            {{ range $taxonomyname, $taxonomy := .Site.Taxonomies }}
-      <li><a href="{{ "/" | relLangURL}}{{ $taxonomyname | urlize }}">{{ $taxonomyname }}</a>
-    
-          {{end}}
+      <h5 class="mb-3">Popular Tags</h5>
+      <div class="flex gap-2 flex-wrap justify-start">
+        {{ range (first 15 $.Site.Taxonomies.tags.ByCount) }}
 
-      </ul>
+        <a class="p-2 bg-slate-200 rounded-md" href="/tags/{{ .Name | urlize }}"
+          >{{ .Name | humanize }}</a
+        >
+
+        {{ end }}
+      </div>
+    </div>
+    <div class="">
+      <h5 class="mb-3">Follow us on social media</h5>
+      <div class="flex gap-2 flex-wrap justify-start">
+        {{ range (first 15 $.Site.Taxonomies.tags.ByCount) }}
+
+        <a class="p-2 bg-slate-200 rounded-md" href="/tags/{{ .Name | urlize }}"
+          >{{ .Name | humanize }}</a
+        >
+
+        {{ end }}
+      </div>
     </div>
   </div>
 </div>
