--- a/themes/TechBlog/layouts/partials/components/frontpage-sidebar.html
+++ b/themes/TechBlog/layouts/partials/components/frontpage-sidebar.html
@@ -1,4 +1,4 @@
-<div class="w-52 lg:w-80 bg-slate-100 shrink-0">
+<div class="w-52 lg:w-80 bg-slate-100 shrink-0 hidden md:inline-block">
   <div class="p-4 flex flex-col gap-6">
     <div class="">
       <h5 class="mb-3">Popular Tags</h5>
