--- a/themes/TechBlog/layouts/partials/head.html
+++ b/themes/TechBlog/layouts/partials/head.html
@@ -21,4 +21,5 @@
     integrity="{{ $styles.Data.Integrity }}"
   />
   {{ end -}}
+  <link rel="stylesheet" href='{{"css/dynamic.css" | relURL }}' />
 </head>
