--- a/themes/TechBlog/layouts/partials/footer.html
+++ b/themes/TechBlog/layouts/partials/footer.html
@@ -1,16 +1,18 @@
+<script src='{{ "js/index.js" | absURL }}'></script>
+
 <footer class="bg-slate-700 text-slate-50">
   <div
-    class="max-w-4xl lg:max-w-5xl xl:max-w-7xl container mx-auto mt-24 py-32 flex flex-wrap gap-6 px-4"
+    class="container flex flex-wrap max-w-4xl gap-6 px-4 py-32 mx-auto mt-24 lg:max-w-5xl xl:max-w-7xl"
   >
     <div class="max-w-sm">
       {{ partial "components/logo-small-white.html" . }}
       <p class="mt-2 text-slate-50">{{.Site.Params.Description}}</p>
     </div>
-    <div class="max-w-sm flex flex-col gap-1">
+    <div class="flex flex-col max-w-sm gap-1">
       {{ range .Site.RegularPages }}
       <a
         href="#"
-        class="text-slate-50 dark:text-slate-900 uppercase font-normal"
+        class="font-normal uppercase text-slate-50 dark:text-slate-900"
         >{{.Params.category}}</a
       >
       {{end}}
