--- a/themes/TechBlog/layouts/partials/components/blog-sidebar.html
+++ b/themes/TechBlog/layouts/partials/components/blog-sidebar.html
@@ -1,1 +1,11 @@
-<div class="hidden basis-1/4 md:inline-block">Sidebar</div>
+<div class="hidden basis-1/4 md:inline-block bg-slate-100">
+  <div class="sticky flex flex-col gap-4 p-4 top-4">
+    <div class="">
+      <h5>Contents</h5>
+      {{ .TableOfContents }}
+    </div>
+    <div class="">
+      <h5>Similar Articles</h5>
+    </div>
+  </div>
+</div>
