--- a/themes/TechBlog/layouts/partials/header.html
+++ b/themes/TechBlog/layouts/partials/header.html
@@ -1,8 +1,7 @@
 <div
-  class="container flex items-center justify-between max-w-4xl mx-auto mt-24 lg:max-w-5xl xl:max-w-7xl gap-9"
+  class="container flex items-center justify-between max-w-4xl mx-auto mt-10 md:mt-24 lg:max-w-5xl xl:max-w-7xl gap-9"
 >
-  {{ partial "components/logo.html" . }}
-
+  <div class="px-3">{{ partial "components/logo.html" . }}</div>
   <div
     class="fixed top-0 z-50 w-full h-screen py-4 bg-slate-700/50 dark:bg-slate-50 md:h-auto md:static backdrop-blur-xl md:bg-slate-700 mobile-nav"
     data-visible="false"
