--- a/themes/TechBlog/layouts/partials/components/frontpage-sidebar.html
+++ b/themes/TechBlog/layouts/partials/components/frontpage-sidebar.html
@@ -1,23 +1,15 @@
-<div class="w-52 lg:w-80 bg-slate-100 shrink-0 hidden md:inline-block">
-  <div class="p-4 flex flex-col gap-6">
+<div class="hidden w-52 lg:w-80 bg-slate-100 shrink-0 md:inline-block">
+  <div class="flex flex-col gap-6 p-4">
     <div class="">
       <h5 class="mb-3">Popular Tags</h5>
-      <div class="flex gap-2 flex-wrap justify-start">
-        {{ range (first 15 $.Site.Taxonomies.tags.ByCount) }}
-
-        <a class="p-2 bg-slate-200 rounded-md" href="/tags/{{ .Name | urlize }}"
-          >{{ .Name | humanize }}</a
-        >
-
-        {{ end }}
-      </div>
+      {{ partial "components/popular-tags.html" . }}
     </div>
     <div class="">
       <h5 class="mb-3">Follow us on social media</h5>
-      <div class="flex gap-2 flex-wrap justify-start">
+      <div class="flex flex-wrap justify-start gap-2">
         {{ range (first 15 $.Site.Taxonomies.tags.ByCount) }}
 
-        <a class="p-2 bg-slate-200 rounded-md" href="/tags/{{ .Name | urlize }}"
+        <a class="p-2 rounded-md bg-slate-200" href="/tags/{{ .Name | urlize }}"
           >{{ .Name | humanize }}</a
         >
 
