--- a/themes/TechBlog/layouts/partials/header.html
+++ b/themes/TechBlog/layouts/partials/header.html
@@ -3,7 +3,7 @@
 >
   <div class="px-3">{{ partial "components/logo.html" . }}</div>
   <div
-    class="fixed top-0 z-50 w-full h-screen py-4 bg-slate-700/50 dark:bg-slate-50 md:h-auto md:static backdrop-blur-xl md:bg-slate-700 mobile-nav"
+    class="fixed top-0 z-50 w-full h-screen py-4 overflow-scroll bg-slate-700/50 dark:bg-slate-50 md:h-auto md:static backdrop-blur-xl md:bg-slate-700 mobile-nav"
     data-visible="false"
   >
     <div
@@ -15,7 +15,7 @@
         {{ range .Site.RegularPages }}
         <a
           href="#"
-          class="font-semibold uppercase text-slate-50 dark:text-slate-900"
+          class="text-2xl font-semibold uppercase md:text-sm text-slate-50 dark:text-slate-900"
           >{{.Params.category}}</a
         >
         {{end}}
