--- a/themes/TechBlog/layouts/partials/components/logo.html
+++ b/themes/TechBlog/layouts/partials/components/logo.html
@@ -1,5 +1,5 @@
-<a href="/" class="flex gap-3 items-center flex-row">
-  <div class="p-2 bg-sky-100 dark:bg-white-100/25 rounded-full">
+<a href="/" class="flex flex-row items-center gap-3">
+  <div class="p-2 rounded-full bg-sky-100 dark:bg-white/20">
     <svg
       xmlns="http://www.w3.org/2000/svg"
       fill="none"
@@ -16,7 +16,7 @@
   </div>
   <div class="flex flex-col">
     <h1
-      class="text-3xl md:text-5xl font-semibold text-slate-900 dark:text-slate-100"
+      class="text-3xl font-semibold md:text-5xl text-slate-900 dark:text-slate-100"
     >
       {{.Site.Title}}
     </h1>
