--- a/themes/TechBlog/layouts/_default/baseof.html
+++ b/themes/TechBlog/layouts/_default/baseof.html
@@ -4,9 +4,9 @@
   <body
     class="min-h-screen dark:bg-[#07070f] dark:text-white transition-colors duration-300"
   >
-    {{- partial "header.html" . -}}
+    {{- partial "dev/dev-tools.html" . -}} {{- partial "header.html" . -}}
     <div
-      class="max-w-4xl lg:max-w-5xl xl:max-w-7xl container mx-auto mt-24 px-4"
+      class="container max-w-4xl px-4 mx-auto mt-24 lg:max-w-5xl xl:max-w-7xl"
     >
       {{- block "main" . }}{{- end }}
     </div>
