--- a/themes/TechBlog/layouts/_default/single.html
+++ b/themes/TechBlog/layouts/_default/single.html
@@ -33,7 +33,7 @@
         {{ range .Params.tags }}
 
         <a
-          class="p-2 text-sm rounded-md bg-slate-200"
+          class="p-2 text-sm transition-all rounded-md bg-slate-200 dark:bg-slate-200/20 hover:scale-105 dark:hover:bg-slate-200/30"
           href="/tags/{{ . | urlize }}"
           >{{ . }}</a
         >
