--- a/themes/TechBlog/layouts/partials/components/article-preview-big.html
+++ b/themes/TechBlog/layouts/partials/components/article-preview-big.html
@@ -1,5 +1,5 @@
 <a
-  class="flex flex-col min-w-[250px] gap-4 news-article-small flex-1"
+  class="flex flex-col min-w-[250px] sm:max-w-[33%] gap-4 news-article-small flex-1"
   href="{{.Permalink}}"
 >
   <div class="z-10 w-full h-40 overflow-hidden">
@@ -13,7 +13,7 @@
     />
     {{ end }}
   </div>
-  <div class="flex flex-col gap-1 items-start">
+  <div class="flex flex-col items-start gap-1">
     {{ partial "components/category-tag.html" . }}
     <h3>{{.Title}}</h3>
     <span class="text-sm font-semibold tracking-wide"
