--- a/themes/TechBlog/layouts/partials/components/blog-sidebar.html
+++ b/themes/TechBlog/layouts/partials/components/blog-sidebar.html
@@ -1,7 +1,7 @@
-<div class="hidden basis-1/4 md:inline-block bg-slate-100">
+<div class="hidden basis-1/4 md:inline-block bg-slate-100 dark:bg-slate-100/20">
   <div class="sticky flex flex-col gap-8 p-4 top-4">
     <div class="">
-      <h5>New Articles</h5>
+      <h5 class="mb-2">New Articles</h5>
       <div class="flex flex-wrap gap-4">
         <!-- prettier-ignore -->
         {{ $newest := .Site.RegularPages.ByDate | first 3 }} {{ with $newest }}
@@ -9,12 +9,17 @@
       </div>
     </div>
     <div class="">
-      <h5>Article Contents</h5>
+      <h5 class="mb-2">Article Contents</h5>
       <div class="flex flex-col gap-2">{{ .TableOfContents }}</div>
     </div>
     <div class="">
-      <h5>Popular Tags</h5>
+      <h5 class="mb-2">Popular Tags</h5>
       {{ partial "components/popular-tags.html" . }}
+    </div>
+
+    <div class="">
+      <h5 class="mb-2">Follow us on Social Media</h5>
+      {{ partial "components/follow-us.html" . }}
     </div>
   </div>
 </div>
