--- a/themes/TechBlog/layouts/partials/components/category-tag.html
+++ b/themes/TechBlog/layouts/partials/components/category-tag.html
@@ -1,4 +1,4 @@
 <span
-  class="font-sans text-xs uppercase text-white px-2 py-1 bg-sky-600 font-semibold rounded-md tracking-wider"
-  >{{.Params.category}}</span
+  class="px-2 py-1 font-sans text-xs font-semibold tracking-wider text-white uppercase rounded-md bg-sky-600"
+  >{{.Parent.Title}}</span
 >
