--- a/themes/TechBlog/layouts/partials/components/frontpage-sidebar.html
+++ b/themes/TechBlog/layouts/partials/components/frontpage-sidebar.html
@@ -1,4 +1,6 @@
-<div class="hidden w-52 lg:w-80 bg-slate-100 shrink-0 md:inline-block">
+<div
+  class="hidden w-52 lg:w-80 bg-slate-100 dark:bg-slate-100/20 shrink-0 md:inline-block"
+>
   <div class="flex flex-col gap-6 p-4">
     <div class="">
       <h5 class="mb-3">Popular Tags</h5>
@@ -6,15 +8,7 @@
     </div>
     <div class="">
       <h5 class="mb-3">Follow us on social media</h5>
-      <div class="flex flex-wrap justify-start gap-2">
-        {{ range (first 15 $.Site.Taxonomies.tags.ByCount) }}
-
-        <a class="p-2 rounded-md bg-slate-200" href="/tags/{{ .Name | urlize }}"
-          >{{ .Name | humanize }}</a
-        >
-
-        {{ end }}
-      </div>
+      {{ partial "components/follow-us.html" . }}
     </div>
   </div>
 </div>
