--- a/themes/TechBlog/layouts/partials/footer.html
+++ b/themes/TechBlog/layouts/partials/footer.html
@@ -2,20 +2,31 @@
 
 <footer class="bg-slate-700 text-slate-50">
   <div
-    class="container flex flex-wrap max-w-4xl gap-6 px-4 py-32 mx-auto mt-24 lg:max-w-5xl xl:max-w-7xl"
+    class="container flex flex-col max-w-4xl gap-12 px-4 py-32 mx-auto mt-24 lg:max-w-5xl xl:max-w-7xl"
   >
-    <div class="max-w-sm">
-      {{ partial "components/logo-small-white.html" . }}
-      <p class="mt-2 text-slate-50">{{.Site.Params.Description}}</p>
+    <div class="flex flex-wrap justify-start gap-16">
+      <div class="flex flex-col max-w-sm gap-1">
+        <h5 class="mb-2">Menu</h5>
+        {{ range $.Site.Menus.main }}
+        <a href="#" class="font-normal uppercase text-slate-50">{{.Name}}</a>
+        {{end}}
+      </div>
+
+      <div class="max-w-sm">
+        <h5 class="mb-2">Popular Tags</h5>
+        {{ partial "components/popular-tags-dark.html" . }}
+      </div>
     </div>
-    <div class="flex flex-col max-w-sm gap-1">
-      {{ range .Site.RegularPages }}
-      <a
-        href="#"
-        class="font-normal uppercase text-slate-50 dark:text-slate-900"
-        >{{.Params.category}}</a
-      >
-      {{end}}
+
+    <div class="flex flex-wrap-reverse items-end justify-between gap-6">
+      <div class="max-w-sm shrink-0">
+        {{ partial "components/logo-small-white.html" . }}
+        <p class="mt-2 text-slate-50">{{.Site.Params.Description}}</p>
+      </div>
+      <div class="flex flex-col items-end">
+        <h5 class="mb-2">Follow us on Social Media</h5>
+        {{ partial "components/follow-us.html" . }}
+      </div>
     </div>
   </div>
 </footer>
