--- a/themes/TechBlog/layouts/_default/baseof.html
+++ b/themes/TechBlog/layouts/_default/baseof.html
@@ -2,7 +2,7 @@
 <html>
   {{- partial "head.html" . -}}
   <body
-    class="min-h-screen dark:bg-[#07070f] dark:text-white transition-colors duration-300"
+    class="min-h-screen dark:bg-[#07070f] dark:text-white transition-colors duration-300 overflow-hidden"
   >
     {{- partial "dev/dev-tools.html" . -}} {{- partial "header.html" . -}}
     <div
