--- a/themes/TechBlog/layouts/partials/components/follow-us.html
+++ b/themes/TechBlog/layouts/partials/components/follow-us.html
@@ -1,4 +1,4 @@
-<div class="flex gap-2">
+<div class="flex items-end gap-2">
   <a href="{{$.Site.Params.instagram}}" class="" target="_blank">
     <svg
       xmlns="http://www.w3.org/2000/svg"
