--- a/themes/TechBlog/layouts/_default/baseof.html
+++ b/themes/TechBlog/layouts/_default/baseof.html
@@ -2,11 +2,12 @@
 <html>
   {{- partial "head.html" . -}}
   <body
-    class="min-h-screen dark:bg-[#07070f] dark:text-white transition-colors duration-300 overflow-hidden"
+    class="min-h-screen dark:bg-[#07070f] dark:text-white transition-colors duration-300 overflow-x-hidden"
+    aria-menuOpenend="false"
   >
     {{- partial "dev/dev-tools.html" . -}} {{- partial "header.html" . -}}
     <div
-      class="container max-w-4xl px-4 mx-auto mt-24 lg:max-w-5xl xl:max-w-7xl"
+      class="container max-w-4xl px-4 mx-auto mt-12 sm:mt-20 md:mt-24 lg:max-w-5xl xl:max-w-7xl"
     >
       {{- block "main" . }}{{- end }}
     </div>
