--- a/themes/TechBlog/layouts/partials/components/popular-tags.html
+++ b/themes/TechBlog/layouts/partials/components/popular-tags.html
@@ -2,7 +2,7 @@
   {{ range (first 15 $.Site.Taxonomies.tags.ByCount) }}
 
   <a
-    class="p-2 transition-all duration-200 rounded-md bg-slate-200 dark:bg-slate-200/20 hover:bg-opacity-30 hover:scale-105"
+    class="p-2 text-sm font-semibold uppercase transition-all duration-200 rounded-md bg-slate-200 dark:bg-slate-200/20 hover:bg-slate-300 dark:hover:bg-opacity-30 hover:scale-105"
     href="/tags/{{ .Name | urlize }}"
     >{{ .Name | humanize }}</a
   >
