--- a/themes/TechBlog/layouts/partials/header.html
+++ b/themes/TechBlog/layouts/partials/header.html
@@ -3,18 +3,18 @@
 >
   {{ partial "components/logo.html" . }}
   <div
-    class="fixed top-0 bottom-0 right-0 z-50 block w-auto h-screen max-w-full overflow-x-hidden overflow-y-scroll md:overflow-x-scroll bg-slate-700/50 dark:bg-slate-700/50 md:h-auto md:static backdrop-blur-xl md:bg-slate-700 mobile-nav"
+    class="fixed top-0 bottom-0 right-0 z-50 block w-auto h-screen max-w-full overflow-x-hidden overflow-y-scroll md:w-full md:overflow-x-scroll bg-slate-700/50 dark:bg-slate-700/50 md:h-auto md:static backdrop-blur-xl md:bg-slate-700 mobile-nav"
     data-visible="false"
   >
     <div
       class="flex flex-col justify-between h-full pb-12 pt-28 md:pb-0 md:pt-0"
     >
       <div
-        class="flex flex-col items-start gap-4 md:gap-0 md:flex-row px-7 md:mb-0 md:mt-0"
+        class="flex flex-col items-start gap-0 md:gap-0 md:flex-row px-7 md:mb-0 md:mt-0"
       >
         {{ range $.Site.Menus.main }}
         <a
-          class="px-0 py-4 text-2xl font-semibold uppercase md:px-6 md:text-sm text-slate-50 md:hover:bg-sky-500 shrink-0 grow md:text-center"
+          class="px-0 my-2 text-2xl font-semibold uppercase md:py-4 md:px-6 md:text-sm text-slate-50 md:hover:bg-sky-500 shrink-0 grow md:text-center"
           href="{{.URL}}"
           >{{ .Name }}</a
         >
