responsive menu update

--- a/themes/TechBlog/layouts/partials/header.html
+++ b/themes/TechBlog/layouts/partials/header.html
@@ -28,7 +28,7 @@
   </div>
 
   <button
-    class="sticky top-6 md:hidden nav-toggle z-[60] right-3"
+    class="top-6 md:hidden nav-toggle z-[60] right-3"
     aria-expanded="false"
   >
     <svg
