responsive menu update

--- a/themes/TechBlog/layouts/partials/header.html
+++ b/themes/TechBlog/layouts/partials/header.html
@@ -14,7 +14,7 @@
       >
         {{ range $.Site.Menus.main }}
         <a
-          class="px-0 my-2 text-2xl font-semibold uppercase md:py-4 md:px-6 md:text-sm text-slate-50 md:hover:bg-sky-500 shrink-0 grow md:text-center"
+          class="px-0 my-2 text-2xl font-semibold uppercase md:my-0 md:py-4 md:px-6 md:text-sm text-slate-50 md:hover:bg-sky-500 shrink-0 grow md:text-center"
           href="{{.URL}}"
           >{{ .Name }}</a
         >
