--- a/themes/TechBlog/layouts/_default/_markup/render-image.html
+++ b/themes/TechBlog/layouts/_default/_markup/render-image.html
@@ -1,11 +1,12 @@
 <!-- prettier-ignore -->
 {{ $image := resources.GetMatch .Destination }}
-{{ if gt $image.Width 640 }}
-    {{ $image = $image.Resize "640x" }}
+{{ if gt $image.Width 900 }}
+    {{ $image = $image.Resize "900x" }}
 {{ end }}
-<figure>
+<figure class="flex flex-col items-start justify-center">
   <img
     src="{{ $image.RelPermalink | safeURL }}"
+    class="lazyload"
     {{
     with
     .Text
