--- a/themes/TechBlog/layouts/partials/components/article-preview-big.html
+++ b/themes/TechBlog/layouts/partials/components/article-preview-big.html
@@ -7,7 +7,7 @@
     {{- $image := resources.Get .Params.featureimg -}} 
     {{ with $image }}
     <img
-      class="object-cover w-full h-full news-image-small"
+      class="object-cover w-full h-full news-image-small lazyload"
       src='{{ ($image.Fill "600x300 q80 Center").RelPermalink }}'
       alt="{{.Params.imageDescription}}"
     />
