--- a/themes/TechBlog/layouts/partials/footer.html
+++ b/themes/TechBlog/layouts/partials/footer.html
@@ -1,3 +1,4 @@
+<script src="lazysizes.min.js" async=""></script>
 <script src='{{ "js/index.js" | absURL }}'></script>
 
 <footer class="bg-slate-700 text-slate-50">
