--- a/themes/TechBlog/layouts/partials/head.html
+++ b/themes/TechBlog/layouts/partials/head.html
@@ -22,4 +22,5 @@
   />
   {{ end -}}
   <link rel="stylesheet" href='{{"css/dynamic.css" | relURL }}' />
+  <script src='{{"lazysizes.min.js" | absURL }}' async=""></script>
 </head>
