--- a/themes/TechBlog/layouts/404.html
+++ b/themes/TechBlog/layouts/404.html
@@ -1,5 +1,5 @@
 {{ define "main" }}
-<div class="min-h-[90vh] flex justify-center items-center">
+<div class="flex items-center justify-center">
   <h1>Seems like this page does not exist.</h1>
 </div>
 {{ end }}
