--- a/themes/TechBlog/layouts/partials/components/frontpage-sidebar.html
+++ b/themes/TechBlog/layouts/partials/components/frontpage-sidebar.html
@@ -1,5 +1,5 @@
 <div
-  class="hidden w-52 lg:w-80 bg-slate-100 dark:bg-slate-100/20 shrink-0 md:inline-block"
+  class="hidden overflow-y-scroll w-52 lg:w-80 bg-slate-100 dark:bg-slate-100/20 shrink-0 md:inline-block"
 >
   <div class="flex flex-col gap-6 p-4">
     <div class="">
@@ -9,6 +9,14 @@
     <div class="">
       <h5 class="mb-3">Follow us on social media</h5>
       {{ partial "components/follow-us.html" . }}
+    </div>
+    <div class="">
+      <h5 class="mb-2">New Articles</h5>
+      <div class="flex flex-wrap gap-4">
+        <!-- prettier-ignore -->
+        {{ $newest := .Site.RegularPages.ByDate | last 3 }} {{ with $newest }}
+        {{- range .}} {{ partial "components/sidebar-article.html" . }} {{end }} {{end}}
+      </div>
     </div>
   </div>
 </div>
