--- a/themes/TechBlog/layouts/_default/baseof.html
+++ b/themes/TechBlog/layouts/_default/baseof.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="{{ .Site.Params.languageCode}}">
   {{- partial "head.html" . -}}
   <body
     class="min-h-screen dark:bg-[#07070f] dark:text-white transition-colors duration-300 overflow-x-hidden"
