--- a/themes/TechBlog/layouts/partials/header.html
+++ b/themes/TechBlog/layouts/partials/header.html
@@ -30,7 +30,7 @@
   <button
     class="top-6 md:hidden nav-toggle z-[60] right-3"
     aria-expanded="false"
-    aria-label="Toggle Menu"
+    aria-label="Toggle the Menu"
   >
     <svg
       xmlns="http://www.w3.org/2000/svg"
