--- a/themes/TechBlog/layouts/partials/components/follow-us.html
+++ b/themes/TechBlog/layouts/partials/components/follow-us.html
@@ -1,5 +1,10 @@
 <div class="flex items-end gap-2">
-  <a href="{{$.Site.Params.instagram}}" class="" target="_blank">
+  <a
+    href="{{$.Site.Params.instagram}}"
+    class=""
+    target="_blank"
+    aria-label="Instagram"
+  >
     <svg
       xmlns="http://www.w3.org/2000/svg"
       width="24"
@@ -13,7 +18,12 @@
     </svg>
   </a>
 
-  <a href="{{$.Site.Params.youtube}}" class="" target="_blank">
+  <a
+    href="{{$.Site.Params.youtube}}"
+    class=""
+    target="_blank"
+    aria-label="Youtube"
+  >
     <svg
       xmlns="http://www.w3.org/2000/svg"
       width="24"
@@ -27,7 +37,12 @@
     </svg>
   </a>
 
-  <a href="{{$.Site.Params.twitter}}" class="" target="_blank">
+  <a
+    href="{{$.Site.Params.twitter}}"
+    class=""
+    target="_blank"
+    aria-label="Twitter"
+  >
     <svg
       xmlns="http://www.w3.org/2000/svg"
       width="24"
@@ -41,7 +56,12 @@
     </svg>
   </a>
 
-  <a href="{{$.Site.Params.facebook}}" class="" target="_blank">
+  <a
+    href="{{$.Site.Params.facebook}}"
+    class=""
+    target="_blank"
+    aria-label="Facebook"
+  >
     <svg
       xmlns="http://www.w3.org/2000/svg"
       width="24"
@@ -55,7 +75,12 @@
     </svg>
   </a>
 
-  <a href="{{$.Site.Params.tiktok}}" class="" target="_blank">
+  <a
+    href="{{$.Site.Params.tiktok}}"
+    class=""
+    target="_blank"
+    aria-label="TikTok"
+  >
     <svg
       width="24"
       height="24"
