--- a/themes/TechBlog/layouts/_default/single.html
+++ b/themes/TechBlog/layouts/_default/single.html
@@ -62,7 +62,7 @@
 
 <div class="pt-8">
   {{ $related := .Site.RegularPages.Related . | first 3 }} {{ with $related }}
-  <h3 class="pt-8 mb-4 border-t-2 border-slate-200">
+  <h3 class="pt-8 mb-4 border-t-2 border-slate-200 dark:border-slate-200/30">
     Articles you might also like
   </h3>
   <div class="flex flex-wrap gap-4">
