--- a/themes/TechBlog/layouts/partials/header.html
+++ b/themes/TechBlog/layouts/partials/header.html
@@ -1,5 +1,5 @@
 <div
-  class="container flex items-center justify-between max-w-4xl px-3 mx-auto mt-10 md:items-start xl:items-center md:flex-col xl:flex-row md:mt-24 lg:max-w-5xl xl:max-w-7xl gap-9"
+  class="container flex items-center justify-between hidden max-w-4xl px-3 mx-auto mt-10 md:items-start xl:items-center md:flex-col xl:flex-row md:mt-24 lg:max-w-5xl xl:max-w-7xl gap-9"
 >
   {{ partial "components/logo.html" . }}
   <div
