--- a/themes/TechBlog/layouts/partials/components/frontpage-sidebar.html
+++ b/themes/TechBlog/layouts/partials/components/frontpage-sidebar.html
@@ -1,7 +1,7 @@
 <div
-  class="hidden overflow-y-scroll w-52 lg:w-80 bg-slate-100 dark:bg-slate-100/10 shrink-0 md:inline-block"
+  class="hidden w-52 lg:w-80 bg-slate-100 dark:bg-slate-100/10 shrink-0 md:inline-block"
 >
-  <div class="flex flex-col gap-6 p-4">
+  <div class="sticky flex flex-col gap-6 p-4 top-4">
     <div class="">
       <h5 class="mb-3">Popular Tags</h5>
       {{ partial "components/popular-tags.html" . }}
