--- a/themes/TechBlog/layouts/partials/header.html
+++ b/themes/TechBlog/layouts/partials/header.html
@@ -1,6 +1,7 @@
 <div
   class="container flex items-center justify-between max-w-4xl px-4 mx-auto mt-10 md:items-start xl:items-center md:flex-col xl:flex-row md:mt-24 lg:max-w-5xl xl:max-w-7xl gap-9"
 >
+  {{ partial "components/logo.html" . }}
   <div
     class="fixed top-0 bottom-0 right-0 z-50 block w-auto h-screen max-w-full overflow-x-hidden overflow-y-scroll md:w-full md:overflow-x-scroll bg-slate-700/50 dark:bg-slate-700/50 md:h-auto md:static backdrop-blur-xl md:bg-slate-700 mobile-nav"
     data-visible="false"
@@ -27,7 +28,7 @@
   </div>
 
   <button
-    class="top-6 md:hidden nav-toggle z-[60] right-3"
+    class="top-6 md:hidden nav-toggle z-[60] right-3 hidden"
     aria-expanded="false"
     aria-label="Toggle the Menu"
   >
