--- a/themes/TechBlog/layouts/partials/header.html
+++ b/themes/TechBlog/layouts/partials/header.html
@@ -3,7 +3,7 @@
 >
   {{ partial "components/logo.html" . }}
   <div
-    class="fixed top-0 bottom-0 right-0 z-50 block w-auto h-screen max-w-full overflow-x-hidden overflow-y-scroll md:w-full md:overflow-x-scroll bg-slate-700/50 dark:bg-slate-700/50 md:h-auto md:static backdrop-blur-xl md:bg-slate-700 mobile-nav"
+    class="fixed top-0 bottom-0 right-0 z-50 hidden block w-auto h-screen max-w-full overflow-x-hidden overflow-y-scroll md:w-full md:overflow-x-scroll bg-slate-700/50 dark:bg-slate-700/50 md:h-auto md:static backdrop-blur-xl md:bg-slate-700 mobile-nav"
     data-visible="false"
   >
     <div
@@ -28,7 +28,7 @@
   </div>
 
   <button
-    class="top-6 md:hidden nav-toggle z-[60] right-3 hidden"
+    class="top-6 md:hidden nav-toggle z-[60] right-3"
     aria-expanded="false"
     aria-label="Toggle the Menu"
   >
