--- a/themes/TechBlog/layouts/partials/head.html
+++ b/themes/TechBlog/layouts/partials/head.html
@@ -46,4 +46,37 @@
   {{- else -}}
   <meta name="keywords" content="{{ range .Params.tags }}{{.}},  {{end}}" />
   {{- end }}
+
+  <!-- FAVICON -->
+
+  <link
+    rel="apple-touch-icon"
+    sizes="180x180"
+    href='{{"/img/apple-touch-icon.png" | absURL}}'
+  />
+  <link
+    rel="icon"
+    type="image/png"
+    sizes="32x32"
+    href='{{"/img/favicon-32x32.png" | absURL}}'
+  />
+  <link
+    rel="icon"
+    type="image/png"
+    sizes="16x16"
+    href='{{"/img/favicon-16x16.png" | absURL}}'
+  />
+  <link rel="manifest" href='{{"/img/site.webmanifest" | absURL}}' />
+  <link
+    rel="mask-icon"
+    href='{{"/img/safari-pinned-tab.svg" | absURL}}'
+    color="#5bbad5"
+  />
+  <link rel="shortcut icon" href='{{"/img/favicon.ico" | absURL}}' />
+  <meta name="msapplication-TileColor" content="#da532c" />
+  <meta
+    name="msapplication-config"
+    content='{{"/img/browserconfig.xml" | absURL}}'
+  />
+  <meta name="theme-color" content="#ffffff" />
 </head>
