--- a/themes/TechBlog/layouts/index.html
+++ b/themes/TechBlog/layouts/index.html
@@ -1,6 +1,6 @@
 {{ define "main" }}
 
-<div class="mt-12">{{ partial "frontpage/hero-news-grid.html" . }}</div>
+<div class="mt-12 md:mt-0">{{ partial "frontpage/hero-news-grid.html" . }}</div>
 
 <div class="flex gap-6 mt-12">
   <div class="">
