--- a/themes/TechBlog/layouts/_default/baseof.html
+++ b/themes/TechBlog/layouts/_default/baseof.html
@@ -6,7 +6,9 @@
   >
     {{- partial "dev/dev-tools.html" . -}} {{- partial "header.html" . -}}
     <div
-      class="container max-w-4xl px-4 mx-auto mt-12 sm:mt-20 md:mt-24 lg:max-w-5xl xl:max-w-7xl"
+      class="container max-w-4xl px-4 mx-auto  lg:max-w-5xl xl:max-w-7xl  {{ if .IsHome }}
+        mt-6 md:mt-8 {{else}} mt-12  sm:mt-20 md:mt-24
+      {{ end }}"
     >
       {{- block "main" . }}{{- end }}
     </div>
