--- a/themes/TechBlog/layouts/index.html
+++ b/themes/TechBlog/layouts/index.html
@@ -23,6 +23,7 @@
         partial "components/article-preview-small.html" .}} {{end}}
       </div>
     </div>
+    {{ partial "components/show-all-btn.html" . }}
   </div>
   {{ partial "components/frontpage-sidebar.html" . }}
 </div>
