--- a/themes/TechBlog/layouts/_default/single.html
+++ b/themes/TechBlog/layouts/_default/single.html
@@ -3,7 +3,11 @@
   <div class="md:basis-3/4">
     <div class="flex flex-col gap-2 mb-8">
       <h1 class="text-5xl font-bold">{{.Title}}</h1>
-      <span class="text-xl font-normal">By {{.Params.Author}}</span>
+      <a
+        class="text-xl font-normal"
+        href="{{.Site.BaseURL}}/authors/{{.Params.Author | urlize}}"
+        >By {{.Params.Author}}</a
+      >
       <div class="flex gap-2">
         <span class="text-sm font-bold uppercase"
           >{{.Params.Date.Format "January 2, 2006"}}</span
