--- a/themes/TechBlog/layouts/404.html
+++ b/themes/TechBlog/layouts/404.html
@@ -1,5 +1,5 @@
 {{ define "main" }}
-<div class="flex items-center justify-center">
+<div class="flex flex-col items-center justify-center gap-8">
   <h1>404</h1>
   <h2>Seems like this page does not exist.</h2>
 
