--- a/themes/TechBlog/layouts/404.html
+++ b/themes/TechBlog/layouts/404.html
@@ -3,7 +3,7 @@
   <h1>404</h1>
   <h2>Seems like this page does not exist.</h2>
 
-  <div class="flex flex-wrap gap-6">
+  <div class="flex flex-wrap gap-6 mt-8">
     {{$ThirdArticles := where .Site.RegularPages "Section" "articles"}} {{range
     (first 3 $ThirdArticles)}} {{ partial
     "components/article-preview-front-big.html" .}} {{end}}
