--- a/themes/TechBlog/layouts/partials/components/category-tag.html
+++ b/themes/TechBlog/layouts/partials/components/category-tag.html
@@ -1,4 +1,4 @@
 <span
-  class="px-2 py-1 font-sans text-xs font-semibold tracking-wider text-white uppercase rounded-md bg-sky-700"
+  class="px-2 py-1 font-sans text-xs font-semibold tracking-wider text-white uppercase rounded-md bg-{{$.Parent.Params.tagColor}}-700"
   >{{.Parent.Title}}</span
 >
