--- a/themes/TechBlog/layouts/partials/components/logo.html
+++ b/themes/TechBlog/layouts/partials/components/logo.html
@@ -1,4 +1,7 @@
-<a href="/" class="flex flex-row items-center flex-shrink-0 gap-3">
+<a
+  href="/"
+  class="flex flex-row items-center flex-shrink gap-3 md:flex-shrink-0"
+>
   <div class="">
     <img
       src="/img/logo-globe.svg"
