--- a/themes/TechBlog/layouts/partials/frontpage/hero-news-grid.html
+++ b/themes/TechBlog/layouts/partials/frontpage/hero-news-grid.html
@@ -12,7 +12,7 @@
       class="absolute z-30 flex flex-col items-start justify-end h-full px-6 py-3 text-white"
     >
       {{ partial "components/category-tag.html" . }}
-      <h2 class="text-2xl font-semibold tracking-tight md:text-3xl">
+      <h2 class="text-2xl font-medium tracking-tight md:text-3xl">
         {{.Title}}
       </h2>
     </div>
@@ -49,7 +49,7 @@
         class="absolute z-30 flex flex-col items-start justify-end h-full px-6 py-3 text-white"
       >
         {{ partial "components/category-tag.html" . }}
-        <h3 class="text-2xl font-semibold tracking-tight md:text-2xl">
+        <h3 class="text-xl font-medium tracking-tight md:text-2xl">
           {{.Title}}
         </h3>
       </div>
