--- a/themes/TechBlog/layouts/partials/frontpage/hero-news-grid.html
+++ b/themes/TechBlog/layouts/partials/frontpage/hero-news-grid.html
@@ -12,9 +12,7 @@
       class="absolute z-30 flex flex-col items-start justify-end h-full px-6 py-3 text-white"
     >
       {{ partial "components/category-tag.html" . }}
-      <h2 class="text-2xl font-medium tracking-tight md:text-3xl">
-        {{.Title}}
-      </h2>
+      <h2 class="text-2xl font-bold tracking-tight md:text-3xl">{{.Title}}</h2>
     </div>
 
     <div class="absolute z-10 w-full h-full">
