--- a/themes/TechBlog/layouts/partials/components/logo-small-white.html
+++ b/themes/TechBlog/layouts/partials/components/logo-small-white.html
@@ -1,4 +1,7 @@
-<a href="/" class="flex flex-row items-center gap-3">
+<a
+  href="/"
+  class="flex flex-col items-center gap-3 text-center md:text-left md:flex-row"
+>
   <img src="/img/logo-globe.svg" class="w-10 h-10 stroke-sky-500" />
   <div class="flex flex-col">
     <h3 class="text-xl font-semibold text-slate-50 dark:text-slate-100">
