--- a/themes/TechBlog/layouts/partials/footer.html
+++ b/themes/TechBlog/layouts/partials/footer.html
@@ -4,7 +4,9 @@
   <div
     class="container flex flex-col max-w-4xl gap-12 px-4 py-32 mx-auto mt-24 lg:max-w-5xl xl:max-w-7xl"
   >
-    <div class="flex flex-wrap justify-start gap-16">
+    <div
+      class="flex flex-wrap justify-start gap-16 lg:justify-between lg:flex-nowrap"
+    >
       <div class="max-w-sm">
         <h5 class="mb-2">Popular Tags</h5>
         {{ partial "components/popular-tags-dark.html" . }}
@@ -16,16 +18,39 @@
         <a href="#" class="font-normal uppercase text-slate-50">{{.Name}}</a>
         {{end}}
       </div>
+
+      <div class="">
+        <h5 class="mb-2">Articles</h5>
+        <div class="flex flex-wrap gap-4 lg:max-w-[390px]">
+          <!-- prettier-ignore -->
+          {{ $newest := shuffle (where .Site.RegularPages "Section" "articles") | last 3 }} {{ with $newest }}
+        {{- range .}} {{ partial "components/sidebar-article.html" . }} {{end }} {{end}}
+        </div>
+      </div>
     </div>
-    <div class="flex flex-wrap-reverse items-center justify-between gap-6">
-      <div class="max-w-sm shrink-1">
+
+    <!-- LOGO and SOCIALS -->
+    <div
+      class="flex flex-col-reverse items-center justify-center md:flex-row gap-9 md:gap-6 md:justify-between"
+    >
+      <div class="max-w-sm text-center shrink-1 md:text-left">
         {{ partial "components/logo-small-white.html" . }}
         <p class="mt-2 text-slate-50">{{.Site.Params.Description}}</p>
       </div>
-      <div class="flex flex-col items-end">
+      <div class="flex flex-col items-center md:items-end">
         <h5 class="mb-2">Follow us on Social Media</h5>
         {{ partial "components/follow-us.html" . }}
       </div>
+    </div>
+    <!-- Legal -->
+    <div class="flex justify-center gap-4 md:justify-start">
+      {{ range $.Site.Menus.legal }}
+      <a
+        href="{{.URL}}"
+        class="text-sm font-semibold tracking-wider uppercase text-white/70"
+        >{{.Title}}</a
+      >
+      {{ end }}
     </div>
   </div>
 </footer>
