--- a/themes/TechBlog/layouts/partials/frontpage/hero-news-grid.html
+++ b/themes/TechBlog/layouts/partials/frontpage/hero-news-grid.html
@@ -12,7 +12,9 @@
       class="absolute z-30 flex flex-col items-start justify-end h-full px-6 py-3 text-white"
     >
       {{ partial "components/category-tag.html" . }}
-      <h2 class="text-2xl font-bold tracking-tight md:text-3xl">{{.Title}}</h2>
+      <h2 class="text-2xl font-semibold tracking-tight md:text-3xl">
+        {{.Title}}
+      </h2>
     </div>
 
     <div class="absolute z-10 w-full h-full">
@@ -47,7 +49,9 @@
         class="absolute z-30 flex flex-col items-start justify-end h-full px-6 py-3 text-white"
       >
         {{ partial "components/category-tag.html" . }}
-        <h3 class="text-xl font-bold tracking-tight md:text-2xl">{{.Title}}</h3>
+        <h3 class="text-xl font-semibold tracking-tight md:text-2xl">
+          {{.Title}}
+        </h3>
       </div>
       <div class="absolute z-10 w-full h-full">
         {{- $image := resources.Get .Params.featureimg -}} {{ with $image }}
