--- a/themes/TechBlog/layouts/partials/footer.html
+++ b/themes/TechBlog/layouts/partials/footer.html
@@ -15,7 +15,11 @@
       <div class="flex flex-col max-w-sm gap-1">
         <h5 class="mb-2">Menu</h5>
         {{ range $.Site.Menus.main }}
-        <a href="#" class="font-normal uppercase text-slate-50">{{.Name}}</a>
+        <a
+          href="#"
+          class="font-semibold tracking-wider uppercase text-slate-50/70"
+          >{{.Name}}</a
+        >
         {{end}}
       </div>
 
@@ -47,7 +51,7 @@
       {{ range $.Site.Menus.legal }}
       <a
         href="{{.URL}}"
-        class="text-sm font-semibold tracking-wider uppercase text-white/70"
+        class="text-sm font-semibold tracking-widest uppercase text-white/70"
         >{{.Title}}</a
       >
       {{ end }}
