--- a/themes/TechBlog/layouts/partials/head.html
+++ b/themes/TechBlog/layouts/partials/head.html
@@ -80,4 +80,6 @@
     content='{{"/img/browserconfig.xml" | absURL}}'
   />
   <meta name="theme-color" content="#ffffff" />
+
+  {{ partial "components/opengraph.html" . }}
 </head>
