--- a/themes/TechBlog/layouts/partials/footer.html
+++ b/themes/TechBlog/layouts/partials/footer.html
@@ -1,6 +1,6 @@
 <script src='{{ "js/index.js" | absURL }}'></script>
 
-<footer class="bg-slate-700 text-slate-50">
+<footer class="dark:bg-slate-900 bg-slate-700 text-slate-50">
   <div
     class="container flex flex-col max-w-4xl gap-12 px-4 py-32 mx-auto mt-24 lg:max-w-5xl xl:max-w-7xl"
   >
